fix api test keys

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <section class="cart-show">
 
-<% if  !@enhanced_cart %>
+<% if  @enhanced_cart %>
 <th> 
 <%= "Sorry, your cart appears to be empty!" %>
 <%= "Please click below to return to the main page" %>
