add about page, controller and routes for top and bottom navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,6 +103,13 @@ form.button_to {
     text-transform: uppercase;
     font-style: italic;
   }
+
+  .about {
+    font-weight: 500;
+    font-family: "Montserrat";
+    font-style: italic;
+    color: white;
+  }
 }
 
 .page-header {
