--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -9,6 +9,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-nav">
   <div class="container">
     <a class="navbar-brand" href="<%= root_path %>">Jungle</a>
+    <a class="about" href="<%= about_index_path %>">About Us</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -18,6 +19,7 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
+    
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
